<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">  
  <modelVersion>4.0.0</modelVersion>  
  <parent> 
    <groupId>org.springframework.boot</groupId>  
    <artifactId>spring-boot-starter-parent</artifactId>  
    <version>2.6.6</version>  
    <relativePath/>  
    <!-- lookup parent from repository --> 
  </parent>  
  <groupId>com.example</groupId>  
  <artifactId>pets</artifactId>  
  <version>1.1.2</version>  
  <name>PetPocket-backend</name>  
  <description>PetPocket-backend</description>  
  <properties> 
    <java.version>17</java.version> 
  </properties>  
  <dependencies> 
    <dependency> 
      <groupId>org.springframework.boot</groupId>  
      <artifactId>spring-boot-starter-data-jpa</artifactId>  
      <version>2.6.5</version> 
    </dependency>  
    <dependency> 
      <groupId>org.springframework.boot</groupId>  
      <artifactId>spring-boot-starter-web</artifactId>  
      <version>2.6.5</version> 
    </dependency>  
    <dependency> 
      <groupId>mysql</groupId>  
      <artifactId>mysql-connector-java</artifactId>  
      <scope>runtime</scope> 
    </dependency>  
    <dependency> 
      <groupId>org.springframework.boot</groupId>  
      <artifactId>spring-boot-starter-test</artifactId>  
      <version>2.6.5</version>  
      <scope>test</scope> 
    </dependency>  
    <dependency> 
      <groupId>org.springframework.boot</groupId>  
      <artifactId>spring-boot-starter-security</artifactId>  
      <version>2.6.5</version>  
      <scope>compile</scope> 
    </dependency>  
    <dependency> 
      <groupId>org.springframework.security</groupId>  
      <artifactId>spring-security-test</artifactId>  
      <scope>compile</scope> 
    </dependency>  
    <dependency> 
      <groupId>org.projectlombok</groupId>  
      <artifactId>lombok</artifactId>  
      <scope>compile</scope> 
    </dependency>  
    <dependency> 
      <groupId>com.auth0</groupId>  
      <artifactId>java-jwt</artifactId>  
      <version>3.19.0</version>  
      <scope>compile</scope> 
    </dependency>  
    <dependency> 
      <groupId>com.aventrix.jnanoid</groupId>  
      <artifactId>jnanoid</artifactId>  
      <version>2.0.0</version>  
      <scope>compile</scope> 
    </dependency>  
    <dependency> 
      <groupId>org.springframework.boot</groupId>  
      <artifactId>spring-boot-starter-mail</artifactId>  
      <version>2.6.7</version>  
      <scope>compile</scope> 
    </dependency>  
    <dependency> 
      <groupId>org.freemarker</groupId>  
      <artifactId>freemarker</artifactId>  
      <scope>compile</scope> 
    </dependency> 
  </dependencies>  
  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.microsoft.azure</groupId>
        <artifactId>azure-webapp-maven-plugin</artifactId>
        <version>2.5.0</version>
        <configuration>
          <schemaVersion>v2</schemaVersion>
          <subscriptionId>cbe8d77b-5379-4045-9b71-b54d9270f22f</subscriptionId>
          <resourceGroup>pets</resourceGroup>
          <appName>pets-app</appName>
          <pricingTier>F1</pricingTier>
          <region>australiaeast</region>
          <appServicePlanName>asp-pets-app</appServicePlanName>
          <appServicePlanResourceGroup>pets</appServicePlanResourceGroup>
          <runtime>
            <os>Windows</os>
            <javaVersion>Java 17</javaVersion>
            <webContainer>Java SE</webContainer>
          </runtime>
          <deployment>
            <resources>
              <resource>
                <directory>${project.basedir}/target</directory>
                <includes>
                  <include>*.jar</include>
                </includes>
              </resource>
            </resources>
          </deployment>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
